# tb3_web_crtl

./: .gitignore  CMakeLists.txt  README.md  [Unit]  app.py  package.xml  start_project.sh  startup_tb3_web.sh
launch/: ccpp_web_monitor.launch
scripts/: ccpp_manager.py  coverage_planner.py  info_logger.py  map_processor.py  path_executor.py  path_planner.py  region_detector.py  web_server.py
srv/: GetTaskStatus.srv
static/: map.pgm  map.yaml
templates/: index.html
web_interface/: index.html
web_interface/css/: style.css
web_interface/js/: app.js  map_visualizer.js
